# serializer version: 1
# name: TestStaticCriterion.test_filter_by_age[event]
  '''
  patient_id,date,event_type,provider
  1,2023-01-21,EXAM,NURSE
  1,2023-01-22,FOLLOW_UP,RADIOLOGIST
  1,2023-02-28,EXAM,
  1,2023-03-29,FOLLOW_UP,RADIOLOGIST
  1,2023-06-10,VACCINATION,
  1,2023-07-11,VACCINATION,LABORATORY
  1,2023-08-03,EMERGENCY,NURSE
  1,2023-09-15,VACCINATION,SPECIALIST
  1,2023-12-11,CONSULTATION,NURSE
  1,2023-12-15,EMERGENCY,
  1,2023-12-26,EMERGENCY,
  4,2023-01-29,VACCINATION,LABORATORY
  4,2023-03-27,VACCINATION,SPECIALIST
  4,2023-04-06,VACCINATION,LABORATORY
  4,2023-04-18,VACCINATION,RADIOLOGIST
  4,2023-05-14,VACCINATION,RADIOLOGIST
  4,2023-06-09,EMERGENCY,NURSE
  4,2023-06-19,FOLLOW_UP,GENERAL_PRACTITIONER
  4,2023-06-28,CONSULTATION,RADIOLOGIST
  4,2023-07-26,EXAM,SPECIALIST
  4,2023-08-19,FOLLOW_UP,NURSE
  4,2023-09-12,EMERGENCY,GENERAL_PRACTITIONER
  6,2023-02-06,EMERGENCY,GENERAL_PRACTITIONER
  6,2023-03-01,CONSULTATION,SPECIALIST
  6,2023-04-22,CONSULTATION,RADIOLOGIST
  6,2023-05-04,EMERGENCY,LABORATORY
  6,2023-05-08,EXAM,
  6,2023-05-28,VACCINATION,GENERAL_PRACTITIONER
  6,2023-05-31,EXAM,
  6,2023-08-21,EMERGENCY,NURSE
  6,2023-09-16,VACCINATION,RADIOLOGIST
  6,2023-09-20,VACCINATION,SPECIALIST
  6,2023-09-24,VACCINATION,GENERAL_PRACTITIONER
  6,2023-10-31,VACCINATION,LABORATORY
  6,2023-12-12,EMERGENCY,NURSE
  7,2023-03-16,CONSULTATION,RADIOLOGIST
  7,2023-04-14,VACCINATION,NURSE
  7,2023-04-22,CONSULTATION,NURSE
  7,2023-06-01,CONSULTATION,RADIOLOGIST
  7,2023-06-02,FOLLOW_UP,SPECIALIST
  7,2023-07-27,FOLLOW_UP,GENERAL_PRACTITIONER
  7,2023-12-04,EXAM,
  8,2023-01-22,FOLLOW_UP,NURSE
  8,2023-05-08,CONSULTATION,
  8,2023-06-10,VACCINATION,
  8,2023-08-14,FOLLOW_UP,GENERAL_PRACTITIONER
  8,2023-09-21,EMERGENCY,
  8,2023-10-04,VACCINATION,NURSE
  8,2023-10-11,CONSULTATION,LABORATORY
  8,2023-11-13,EMERGENCY,
  9,2023-02-15,FOLLOW_UP,NURSE
  9,2023-06-21,VACCINATION,LABORATORY
  9,2023-07-07,CONSULTATION,RADIOLOGIST
  9,2023-07-10,FOLLOW_UP,LABORATORY
  9,2023-07-11,CONSULTATION,GENERAL_PRACTITIONER
  9,2023-08-21,FOLLOW_UP,LABORATORY
  9,2023-10-29,FOLLOW_UP,NURSE
  10,2023-02-05,FOLLOW_UP,RADIOLOGIST
  10,2023-05-07,EMERGENCY,SPECIALIST
  10,2023-06-10,EMERGENCY,SPECIALIST
  10,2023-09-04,EXAM,NURSE
  10,2023-09-30,CONSULTATION,GENERAL_PRACTITIONER
  10,2023-10-08,EXAM,SPECIALIST
  10,2023-10-26,FOLLOW_UP,SPECIALIST
  10,2023-11-02,CONSULTATION,LABORATORY
  10,2023-11-12,EXAM,GENERAL_PRACTITIONER
  10,2023-11-17,VACCINATION,NURSE
  10,2023-11-19,EXAM,SPECIALIST
  
  '''
# ---
# name: TestStaticCriterion.test_filter_by_age[event].1
  '''
  patient_id,gender,age,insurance,chronic_condition
  1,F,81,PUBLIC,True
  4,F,79,PUBLIC,False
  6,F,68,PUBLIC,False
  7,M,80,MIXED,False
  8,M,83,PRIVATE,True
  9,F,68,MIXED,True
  10,F,84,MIXED,False
  
  '''
# ---
# name: TestStaticCriterion.test_filter_by_age[interval]
  '''
  patient_id,start_date,end_date,medication,administration_route,dosage
  1,2023-01-08,2023-01-18,PAIN_RELIEVER,,2
  1,2023-01-12,2023-01-28,ANTICOAGULANT,CUTANEOUS,1
  1,2023-01-20,2023-02-13,ANTIBIOTIC,ORAL,2
  1,2023-05-23,2023-05-30,ANTIHYPERTENSIVE,INTRAVENOUS,3
  1,2023-09-09,2023-09-20,ANTICOAGULANT,INTRAVENOUS,3
  4,2023-02-22,2023-03-05,PAIN_RELIEVER,INTRAMUSCULAR,3
  4,2023-05-25,2023-06-21,ANTIBIOTIC,ORAL,3
  4,2023-06-11,2023-07-09,CORTICOSTEROID,INTRAVENOUS,2
  4,2023-06-22,2023-07-11,ANTICOAGULANT,ORAL,1
  4,2023-07-16,2023-07-27,CORTICOSTEROID,INHALATION,3
  4,2023-10-15,2023-10-23,ANTICOAGULANT,INTRAMUSCULAR,2
  6,2023-03-02,2023-03-27,CORTICOSTEROID,INHALATION,1
  6,2023-03-10,2023-03-18,ANTIHYPERTENSIVE,INTRAMUSCULAR,1
  6,2023-04-02,2023-04-18,ANTIHYPERTENSIVE,INHALATION,2
  6,2023-04-21,2023-05-20,CORTICOSTEROID,CUTANEOUS,1
  6,2023-05-06,2023-05-23,CORTICOSTEROID,INTRAVENOUS,3
  6,2023-05-18,2023-06-17,ANTIBIOTIC,INTRAMUSCULAR,1
  6,2023-07-14,2023-07-23,CORTICOSTEROID,INHALATION,2
  7,2023-02-03,2023-02-26,PAIN_RELIEVER,INHALATION,3
  7,2023-03-14,2023-04-04,ANTIBIOTIC,,3
  7,2023-05-13,2023-05-28,ANTICOAGULANT,INTRAMUSCULAR,2
  8,2023-01-14,2023-02-13,CORTICOSTEROID,,3
  8,2023-01-26,2023-02-05,ANTIBIOTIC,ORAL,3
  8,2023-01-28,2023-02-13,ANTIBIOTIC,ORAL,3
  8,2023-03-19,2023-04-18,PAIN_RELIEVER,INHALATION,2
  8,2023-08-26,2023-09-12,ANTICOAGULANT,INHALATION,2
  8,2023-09-10,2023-10-06,PAIN_RELIEVER,CUTANEOUS,3
  8,2023-10-21,2023-10-30,CORTICOSTEROID,ORAL,3
  9,2023-04-19,2023-05-13,ANTICOAGULANT,INTRAMUSCULAR,3
  9,2023-05-06,2023-05-24,ANTIBIOTIC,ORAL,1
  9,2023-07-31,2023-08-10,PAIN_RELIEVER,INTRAVENOUS,1
  9,2023-09-21,2023-10-05,ANTIBIOTIC,CUTANEOUS,3
  10,2023-03-11,2023-04-09,ANTICOAGULANT,INTRAVENOUS,2
  10,2023-04-05,2023-05-05,ANTIBIOTIC,INTRAVENOUS,3
  10,2023-04-11,2023-04-23,ANTICOAGULANT,INTRAMUSCULAR,2
  10,2023-08-17,2023-08-24,ANTIHYPERTENSIVE,INHALATION,2
  
  '''
# ---
# name: TestStaticCriterion.test_filter_by_age[interval].1
  '''
  patient_id,gender,age,insurance,chronic_condition
  1,F,81,PUBLIC,True
  4,F,79,PUBLIC,False
  6,F,68,PUBLIC,False
  7,M,80,MIXED,False
  8,M,83,PRIVATE,True
  9,F,68,MIXED,True
  10,F,84,MIXED,False
  
  '''
# ---
# name: TestStaticCriterion.test_filter_by_age[state]
  '''
  patient_id,start_date,end_date,health_state,condition
  1,2023-01-01,2023-12-16,HEALTHY,DIGESTIVE
  1,2023-12-16,2023-12-31,HEALTHY,
  4,2023-01-01,2023-06-08,CHRONIC_MONITORING,NEUROLOGICAL
  4,2023-06-08,2023-07-18,CONVALESCENCE,
  4,2023-07-18,2023-12-14,REMISSION,DIGESTIVE
  4,2023-12-14,2023-12-31,CONVALESCENCE,
  6,2023-01-01,2023-03-09,REMISSION,DIGESTIVE
  6,2023-03-09,2023-08-16,TREATMENT,RESPIRATORY
  6,2023-08-16,2023-12-14,TREATMENT,DIGESTIVE
  6,2023-12-14,2023-12-31,CONVALESCENCE,DIGESTIVE
  7,2023-01-01,2023-05-28,HEALTHY,RESPIRATORY
  7,2023-05-28,2023-07-19,TREATMENT,NEUROLOGICAL
  7,2023-07-19,2023-12-14,HEALTHY,DIGESTIVE
  7,2023-12-14,2023-12-31,REMISSION,RESPIRATORY
  8,2023-01-01,2023-12-16,CONVALESCENCE,RESPIRATORY
  8,2023-12-16,2023-12-31,TREATMENT,
  9,2023-01-01,2023-12-16,CONVALESCENCE,DIGESTIVE
  9,2023-12-16,2023-12-31,HEALTHY,
  10,2023-01-01,2023-12-16,HEALTHY,DIGESTIVE
  10,2023-12-16,2023-12-31,CHRONIC_MONITORING,NEUROLOGICAL
  
  '''
# ---
# name: TestStaticCriterion.test_filter_by_age[state].1
  '''
  patient_id,gender,age,insurance,chronic_condition
  1,F,81,PUBLIC,True
  4,F,79,PUBLIC,False
  6,F,68,PUBLIC,False
  7,M,80,MIXED,False
  8,M,83,PRIVATE,True
  9,F,68,MIXED,True
  10,F,84,MIXED,False
  
  '''
# ---
# name: TestStaticCriterion.test_filter_by_age_inplace[event]
  '''
  patient_id,date,event_type,provider
  1,2023-01-21,EXAM,NURSE
  1,2023-01-22,FOLLOW_UP,RADIOLOGIST
  1,2023-02-28,EXAM,
  1,2023-03-29,FOLLOW_UP,RADIOLOGIST
  1,2023-06-10,VACCINATION,
  1,2023-07-11,VACCINATION,LABORATORY
  1,2023-08-03,EMERGENCY,NURSE
  1,2023-09-15,VACCINATION,SPECIALIST
  1,2023-12-11,CONSULTATION,NURSE
  1,2023-12-15,EMERGENCY,
  1,2023-12-26,EMERGENCY,
  4,2023-01-29,VACCINATION,LABORATORY
  4,2023-03-27,VACCINATION,SPECIALIST
  4,2023-04-06,VACCINATION,LABORATORY
  4,2023-04-18,VACCINATION,RADIOLOGIST
  4,2023-05-14,VACCINATION,RADIOLOGIST
  4,2023-06-09,EMERGENCY,NURSE
  4,2023-06-19,FOLLOW_UP,GENERAL_PRACTITIONER
  4,2023-06-28,CONSULTATION,RADIOLOGIST
  4,2023-07-26,EXAM,SPECIALIST
  4,2023-08-19,FOLLOW_UP,NURSE
  4,2023-09-12,EMERGENCY,GENERAL_PRACTITIONER
  6,2023-02-06,EMERGENCY,GENERAL_PRACTITIONER
  6,2023-03-01,CONSULTATION,SPECIALIST
  6,2023-04-22,CONSULTATION,RADIOLOGIST
  6,2023-05-04,EMERGENCY,LABORATORY
  6,2023-05-08,EXAM,
  6,2023-05-28,VACCINATION,GENERAL_PRACTITIONER
  6,2023-05-31,EXAM,
  6,2023-08-21,EMERGENCY,NURSE
  6,2023-09-16,VACCINATION,RADIOLOGIST
  6,2023-09-20,VACCINATION,SPECIALIST
  6,2023-09-24,VACCINATION,GENERAL_PRACTITIONER
  6,2023-10-31,VACCINATION,LABORATORY
  6,2023-12-12,EMERGENCY,NURSE
  7,2023-03-16,CONSULTATION,RADIOLOGIST
  7,2023-04-14,VACCINATION,NURSE
  7,2023-04-22,CONSULTATION,NURSE
  7,2023-06-01,CONSULTATION,RADIOLOGIST
  7,2023-06-02,FOLLOW_UP,SPECIALIST
  7,2023-07-27,FOLLOW_UP,GENERAL_PRACTITIONER
  7,2023-12-04,EXAM,
  8,2023-01-22,FOLLOW_UP,NURSE
  8,2023-05-08,CONSULTATION,
  8,2023-06-10,VACCINATION,
  8,2023-08-14,FOLLOW_UP,GENERAL_PRACTITIONER
  8,2023-09-21,EMERGENCY,
  8,2023-10-04,VACCINATION,NURSE
  8,2023-10-11,CONSULTATION,LABORATORY
  8,2023-11-13,EMERGENCY,
  9,2023-02-15,FOLLOW_UP,NURSE
  9,2023-06-21,VACCINATION,LABORATORY
  9,2023-07-07,CONSULTATION,RADIOLOGIST
  9,2023-07-10,FOLLOW_UP,LABORATORY
  9,2023-07-11,CONSULTATION,GENERAL_PRACTITIONER
  9,2023-08-21,FOLLOW_UP,LABORATORY
  9,2023-10-29,FOLLOW_UP,NURSE
  10,2023-02-05,FOLLOW_UP,RADIOLOGIST
  10,2023-05-07,EMERGENCY,SPECIALIST
  10,2023-06-10,EMERGENCY,SPECIALIST
  10,2023-09-04,EXAM,NURSE
  10,2023-09-30,CONSULTATION,GENERAL_PRACTITIONER
  10,2023-10-08,EXAM,SPECIALIST
  10,2023-10-26,FOLLOW_UP,SPECIALIST
  10,2023-11-02,CONSULTATION,LABORATORY
  10,2023-11-12,EXAM,GENERAL_PRACTITIONER
  10,2023-11-17,VACCINATION,NURSE
  10,2023-11-19,EXAM,SPECIALIST
  
  '''
# ---
# name: TestStaticCriterion.test_filter_by_age_inplace[event].1
  '''
  patient_id,gender,age,insurance,chronic_condition
  1,F,81,PUBLIC,True
  4,F,79,PUBLIC,False
  6,F,68,PUBLIC,False
  7,M,80,MIXED,False
  8,M,83,PRIVATE,True
  9,F,68,MIXED,True
  10,F,84,MIXED,False
  
  '''
# ---
# name: TestStaticCriterion.test_filter_by_age_inplace[interval]
  '''
  patient_id,start_date,end_date,medication,administration_route,dosage
  1,2023-01-08,2023-01-18,PAIN_RELIEVER,,2
  1,2023-01-12,2023-01-28,ANTICOAGULANT,CUTANEOUS,1
  1,2023-01-20,2023-02-13,ANTIBIOTIC,ORAL,2
  1,2023-05-23,2023-05-30,ANTIHYPERTENSIVE,INTRAVENOUS,3
  1,2023-09-09,2023-09-20,ANTICOAGULANT,INTRAVENOUS,3
  4,2023-02-22,2023-03-05,PAIN_RELIEVER,INTRAMUSCULAR,3
  4,2023-05-25,2023-06-21,ANTIBIOTIC,ORAL,3
  4,2023-06-11,2023-07-09,CORTICOSTEROID,INTRAVENOUS,2
  4,2023-06-22,2023-07-11,ANTICOAGULANT,ORAL,1
  4,2023-07-16,2023-07-27,CORTICOSTEROID,INHALATION,3
  4,2023-10-15,2023-10-23,ANTICOAGULANT,INTRAMUSCULAR,2
  6,2023-03-02,2023-03-27,CORTICOSTEROID,INHALATION,1
  6,2023-03-10,2023-03-18,ANTIHYPERTENSIVE,INTRAMUSCULAR,1
  6,2023-04-02,2023-04-18,ANTIHYPERTENSIVE,INHALATION,2
  6,2023-04-21,2023-05-20,CORTICOSTEROID,CUTANEOUS,1
  6,2023-05-06,2023-05-23,CORTICOSTEROID,INTRAVENOUS,3
  6,2023-05-18,2023-06-17,ANTIBIOTIC,INTRAMUSCULAR,1
  6,2023-07-14,2023-07-23,CORTICOSTEROID,INHALATION,2
  7,2023-02-03,2023-02-26,PAIN_RELIEVER,INHALATION,3
  7,2023-03-14,2023-04-04,ANTIBIOTIC,,3
  7,2023-05-13,2023-05-28,ANTICOAGULANT,INTRAMUSCULAR,2
  8,2023-01-14,2023-02-13,CORTICOSTEROID,,3
  8,2023-01-26,2023-02-05,ANTIBIOTIC,ORAL,3
  8,2023-01-28,2023-02-13,ANTIBIOTIC,ORAL,3
  8,2023-03-19,2023-04-18,PAIN_RELIEVER,INHALATION,2
  8,2023-08-26,2023-09-12,ANTICOAGULANT,INHALATION,2
  8,2023-09-10,2023-10-06,PAIN_RELIEVER,CUTANEOUS,3
  8,2023-10-21,2023-10-30,CORTICOSTEROID,ORAL,3
  9,2023-04-19,2023-05-13,ANTICOAGULANT,INTRAMUSCULAR,3
  9,2023-05-06,2023-05-24,ANTIBIOTIC,ORAL,1
  9,2023-07-31,2023-08-10,PAIN_RELIEVER,INTRAVENOUS,1
  9,2023-09-21,2023-10-05,ANTIBIOTIC,CUTANEOUS,3
  10,2023-03-11,2023-04-09,ANTICOAGULANT,INTRAVENOUS,2
  10,2023-04-05,2023-05-05,ANTIBIOTIC,INTRAVENOUS,3
  10,2023-04-11,2023-04-23,ANTICOAGULANT,INTRAMUSCULAR,2
  10,2023-08-17,2023-08-24,ANTIHYPERTENSIVE,INHALATION,2
  
  '''
# ---
# name: TestStaticCriterion.test_filter_by_age_inplace[interval].1
  '''
  patient_id,gender,age,insurance,chronic_condition
  1,F,81,PUBLIC,True
  4,F,79,PUBLIC,False
  6,F,68,PUBLIC,False
  7,M,80,MIXED,False
  8,M,83,PRIVATE,True
  9,F,68,MIXED,True
  10,F,84,MIXED,False
  
  '''
# ---
# name: TestStaticCriterion.test_filter_by_age_inplace[state]
  '''
  patient_id,start_date,end_date,health_state,condition
  1,2023-01-01,2023-12-16,HEALTHY,DIGESTIVE
  1,2023-12-16,2023-12-31,HEALTHY,
  4,2023-01-01,2023-06-08,CHRONIC_MONITORING,NEUROLOGICAL
  4,2023-06-08,2023-07-18,CONVALESCENCE,
  4,2023-07-18,2023-12-14,REMISSION,DIGESTIVE
  4,2023-12-14,2023-12-31,CONVALESCENCE,
  6,2023-01-01,2023-03-09,REMISSION,DIGESTIVE
  6,2023-03-09,2023-08-16,TREATMENT,RESPIRATORY
  6,2023-08-16,2023-12-14,TREATMENT,DIGESTIVE
  6,2023-12-14,2023-12-31,CONVALESCENCE,DIGESTIVE
  7,2023-01-01,2023-05-28,HEALTHY,RESPIRATORY
  7,2023-05-28,2023-07-19,TREATMENT,NEUROLOGICAL
  7,2023-07-19,2023-12-14,HEALTHY,DIGESTIVE
  7,2023-12-14,2023-12-31,REMISSION,RESPIRATORY
  8,2023-01-01,2023-12-16,CONVALESCENCE,RESPIRATORY
  8,2023-12-16,2023-12-31,TREATMENT,
  9,2023-01-01,2023-12-16,CONVALESCENCE,DIGESTIVE
  9,2023-12-16,2023-12-31,HEALTHY,
  10,2023-01-01,2023-12-16,HEALTHY,DIGESTIVE
  10,2023-12-16,2023-12-31,CHRONIC_MONITORING,NEUROLOGICAL
  
  '''
# ---
# name: TestStaticCriterion.test_filter_by_age_inplace[state].1
  '''
  patient_id,gender,age,insurance,chronic_condition
  1,F,81,PUBLIC,True
  4,F,79,PUBLIC,False
  6,F,68,PUBLIC,False
  7,M,80,MIXED,False
  8,M,83,PRIVATE,True
  9,F,68,MIXED,True
  10,F,84,MIXED,False
  
  '''
# ---
# name: TestStaticCriterion.test_filter_by_multiple_static_criterion[event]
  '''
  patient_id,date,event_type,provider
  8,2023-01-22,FOLLOW_UP,NURSE
  8,2023-05-08,CONSULTATION,
  8,2023-06-10,VACCINATION,
  8,2023-08-14,FOLLOW_UP,GENERAL_PRACTITIONER
  8,2023-09-21,EMERGENCY,
  8,2023-10-04,VACCINATION,NURSE
  8,2023-10-11,CONSULTATION,LABORATORY
  8,2023-11-13,EMERGENCY,
  
  '''
# ---
# name: TestStaticCriterion.test_filter_by_multiple_static_criterion[event].1
  '''
  patient_id,gender,age,insurance,chronic_condition
  8,M,83,PRIVATE,True
  
  '''
# ---
# name: TestStaticCriterion.test_filter_by_multiple_static_criterion[interval]
  '''
  patient_id,start_date,end_date,medication,administration_route,dosage
  8,2023-01-14,2023-02-13,CORTICOSTEROID,,3
  8,2023-01-26,2023-02-05,ANTIBIOTIC,ORAL,3
  8,2023-01-28,2023-02-13,ANTIBIOTIC,ORAL,3
  8,2023-03-19,2023-04-18,PAIN_RELIEVER,INHALATION,2
  8,2023-08-26,2023-09-12,ANTICOAGULANT,INHALATION,2
  8,2023-09-10,2023-10-06,PAIN_RELIEVER,CUTANEOUS,3
  8,2023-10-21,2023-10-30,CORTICOSTEROID,ORAL,3
  
  '''
# ---
# name: TestStaticCriterion.test_filter_by_multiple_static_criterion[interval].1
  '''
  patient_id,gender,age,insurance,chronic_condition
  8,M,83,PRIVATE,True
  
  '''
# ---
# name: TestStaticCriterion.test_filter_by_multiple_static_criterion[state]
  '''
  patient_id,start_date,end_date,health_state,condition
  8,2023-01-01,2023-12-16,CONVALESCENCE,RESPIRATORY
  8,2023-12-16,2023-12-31,TREATMENT,
  
  '''
# ---
# name: TestStaticCriterion.test_filter_by_multiple_static_criterion[state].1
  '''
  patient_id,gender,age,insurance,chronic_condition
  8,M,83,PRIVATE,True
  
  '''
# ---
# name: TestStaticCriterion.test_filter_by_multiple_static_criterion_inplace[event]
  '''
  patient_id,date,event_type,provider
  8,2023-01-22,FOLLOW_UP,NURSE
  8,2023-05-08,CONSULTATION,
  8,2023-06-10,VACCINATION,
  8,2023-08-14,FOLLOW_UP,GENERAL_PRACTITIONER
  8,2023-09-21,EMERGENCY,
  8,2023-10-04,VACCINATION,NURSE
  8,2023-10-11,CONSULTATION,LABORATORY
  8,2023-11-13,EMERGENCY,
  
  '''
# ---
# name: TestStaticCriterion.test_filter_by_multiple_static_criterion_inplace[event].1
  '''
  patient_id,gender,age,insurance,chronic_condition
  8,M,83,PRIVATE,True
  
  '''
# ---
# name: TestStaticCriterion.test_filter_by_multiple_static_criterion_inplace[interval]
  '''
  patient_id,start_date,end_date,medication,administration_route,dosage
  8,2023-01-14,2023-02-13,CORTICOSTEROID,,3
  8,2023-01-26,2023-02-05,ANTIBIOTIC,ORAL,3
  8,2023-01-28,2023-02-13,ANTIBIOTIC,ORAL,3
  8,2023-03-19,2023-04-18,PAIN_RELIEVER,INHALATION,2
  8,2023-08-26,2023-09-12,ANTICOAGULANT,INHALATION,2
  8,2023-09-10,2023-10-06,PAIN_RELIEVER,CUTANEOUS,3
  8,2023-10-21,2023-10-30,CORTICOSTEROID,ORAL,3
  
  '''
# ---
# name: TestStaticCriterion.test_filter_by_multiple_static_criterion_inplace[interval].1
  '''
  patient_id,gender,age,insurance,chronic_condition
  8,M,83,PRIVATE,True
  
  '''
# ---
# name: TestStaticCriterion.test_filter_by_multiple_static_criterion_inplace[state]
  '''
  patient_id,start_date,end_date,health_state,condition
  8,2023-01-01,2023-12-16,CONVALESCENCE,RESPIRATORY
  8,2023-12-16,2023-12-31,TREATMENT,
  
  '''
# ---
# name: TestStaticCriterion.test_filter_by_multiple_static_criterion_inplace[state].1
  '''
  patient_id,gender,age,insurance,chronic_condition
  8,M,83,PRIVATE,True
  
  '''
# ---
# name: TestStaticCriterion.test_which_query_criterion[event]
  list([
    1,
    4,
    6,
    7,
    8,
    9,
    10,
  ])
# ---
# name: TestStaticCriterion.test_which_query_criterion[interval]
  list([
    1,
    4,
    6,
    7,
    8,
    9,
    10,
  ])
# ---
# name: TestStaticCriterion.test_which_query_criterion[state]
  list([
    1,
    4,
    6,
    7,
    8,
    9,
    10,
  ])
# ---
